tests/ui/smoke/impl_specialization_2.lm
//# test-outcome=failure

struct Foo<T> { }

impl Foo<Int32> {
    pub fn foo(self) { }
}

fn main() {
    let root = Foo<Boolean> { };

    root.foo();
}
